# pypackage

./: LICENSE.txt  README.md  pyproject.toml
src/pypackage/: cli.py
